--- a/_posts/2019-07-12-the-us-narrative-today.html
+++ b/_posts/2019-07-12-the-us-narrative-today.html
@@ -2663,108 +2663,107 @@ stories:
   domain: http://www.ctbusinesstimes.com/
   link: https://www.ctbusinesstimes.com/2018/06/05/information-on-reckless-driving-laws-in-virginia/
 images:
-- name: mosaic-face-mosaic-face-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-free-woman.jpg
-- name: liberty-back-statue-liberty-back-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-ww2-dresden.jpg
-- name: old-granary-field-granaryfield-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-blue-granite.jpg
-- name: dc-statue-dcstatue-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-blue-brush.jpg
-- name: power-lines-power-lines-empty-space-copper-circuit copy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-copper-circuit
-    copy.jpg
-- name: wind-mills-windmills-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-kand-two.jpg
-- name: old-barn-old-barn-1500-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-colored-circuits.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-feed-people.jpg
-- name: machine-road-machine-road-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-blue-circuit.jpg
-- name: white-house-lawn-white-house-lawn-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-umberto-bocc.jpg
-- name: lincoln-memorial-lincolnmemorial-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-ww2-color.jpg
-- name: oldcabin-store-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-far-away.jpg
-- name: legal-statue-legalstatue-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-ww2-dresden.jpg
-- name: capital-battle-capitolbattle-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-smoking-cigarette.jpg
-- name: old-house-oldhouse-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-crabapple.jpg
-- name: art-museum-art-museum-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-kandinsky-bv.jpg
-- name: supreme-court-supremecourt-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-wols.jpg
-- name: server-cloud1-blue-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud1-blue-circuit.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-alien-goggles.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-alien-goggles.JPG
-- name: oldroad-old-road-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-neo-instinct.jpg
-- name: razorwire-DSC-0080-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-blue-electricity.jpg
-- name: walled-garden-walled-garden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden.jpg
-- name: downtown-trucksilo-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-kand-two.jpg
-- name: aws-s3-lighthouse-lighthouse-still-600.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-lighthouse-lighthouse-still-600.jpg
-- name: fence-fence-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-blue-brush.jpg
-- name: store-on-corner-oldcabin-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-colorful-blocks.jpg
-- name: aws-s3-stories-white-man-burning-down.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-white-man-burning-down.jpg
-- name: gypsymosaic-gypsy-eyes-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-clean-view.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-gan-vogh.jpg
-- name: cargo-ship-cargo-ship-on-sea-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-monet-one.jpg
-- name: blossombar-purple-pond-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-purple-pond-file-00-00-00-00.jpg
-- name: hollywood-building-hollywood-building.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building.jpg
-- name: birdhouse-birdhouse-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-crabapple.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-marcel-duchamp.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-marcel-duchamp.JPG
-- name: oldcabin-store-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-marcel-duchamp.jpg
-- name: server-cloud-server-racks-clouds-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-smooth-ride.jpg
-- name: status-berlin-status-berlin-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-neo-instinct.jpg
-- name: catacombs-catacombs-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-aqua.jpg
-- name: castle-wall-DSC-0067-smoking-cigarette.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-smoking-cigarette.JPG
-- name: docks-docks-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-rainbow-festival.jpg
-- name: white-house-lawn-white-house-lawn-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-blue-granite.jpg
-- name: containership-containership-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-alberto-giacometti.jpg
-- name: oldsmallboat-oldsmallboat-smoking-cigarette.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-smoking-cigarette.jpg
-- name: wreck-IMG_7054.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wreck-IMG_7054.jpg
-- name: old-house-oldhouse-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-bright-sand.jpg
-- name: bordercrossing-bordercrossing-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-satan-red.jpg
-- name: status-berlin-status-berlin-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-propaganda-leaflets.jpg
-- name: oldtrain-oldtrain-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-attack-planes.jpg
-- name: abandonedbuildings_mucha_mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_mucha_mult.jpg
-- name: oldtrain-oldtrain-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-really-hot.jpg
-- name: gears-4882162452-fa3126b38d-b-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-nazi-poster.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-matrix.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-matrix.JPG
+- name: old-door-lock-old-door-lock-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-spagetti-accident.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-copper-circuit.jpg
+- name: beach-rocks-beach-rocks-currents-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-colorful-dream.jpg
+- name: blossombar-gan-vogh-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-gan-vogh-file-00-00-50-62.jpg
+- name: crow-crow-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-plentiful.jpg
+- name: aws-s3-stories-36349140070-d5ec39cb34-z.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-36349140070-d5ec39cb34-z.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-purple-storm.jpg
+- name: white-house-lawn-white-house-window-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-dali-three.jpg
+- name: white-house-whitehouse-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-dark-soul.jpg
+- name: oldhouse-oldhouse-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-hot-spicy.jpg
+- name: old-school-house-old-schoolhouse-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-free-woman.jpg
+- name: oldcabin-store-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-dark-soul.jpg
+- name: yosemite-yosemite-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-gan-vogh.jpg
+- name: statue-of-liberty-front-view-statueofliberty-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-propaganda-leaflets.jpg
+- name: old-cabin-oldcabin-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-rainbow-festival.jpg
+- name: cargo-ship-cargo-ship-on-sea-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-colorful-dream.jpg
+- name: rockingchair-rockingchair-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-dali-three.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-ww2-dresden.jpg
+- name: fence-fence-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-yellow-paper.jpg
+- name: lincoln-memorial-lincolnmemorial.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial.jpg
+- name: oldroad-old-road-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-bright-sand.jpg
+- name: power-lines-power-lines-empty-space-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-horiz-circuit.jpg
+- name: old-barn-old-barn-1500-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-neo-instinct.jpg
+- name: flower-barbed-wire-flower-barbed-wire-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-copper-circuit.jpg
+- name: aws-s3-square-C3JdRtDWMAUqS6L-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-C3JdRtDWMAUqS6L-square.jpg
+- name: windowmountain-window-mountain-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-cinnamon-rolls.jpg
+- name: old-house-oldhouse-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-atari-asteroids.jpg
+- name: berlinwall-DSC-0084-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-bright-sand.jpg
+- name: statue-face-open-mouth-statue-face-open-mouth-blue-circuit.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-blue-circuit.png
+- name: blossombar-green-zuma-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-green-zuma-file-00-00-00-00.jpg
+- name: sand-hand-sand-hand-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-gred-mash.jpg
+- name: powerlines-power-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-mucha-mult.jpg
+- name: mosaic-face-mosaic-face-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-purp-paper.jpg
+- name: docks-docks-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-spagetti-accident.jpg
+- name: catacombs-catacombs-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-feed-people.jpg
+- name: downtown-fredericksburg-downtown-fredericksburg-jap-wav-pr.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-jap-wav-pr.JPG
+- name: meadowbutterfly-meadow-butterfly-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-ww2-dresden.jpg
+- name: docks-docks-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-aqua.jpg
+- name: amusement-park-amusement-park-2-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-blue-brush.jpg
+- name: powerlines-power-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-dali-three.jpg
+- name: oldcabin-store-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-blue-granite.jpg
+- name: gypsymosaic-gypsy-eyes-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-nazi-poster.jpg
+- name: birdhouse-birdhouse-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-umberto-bocc.jpg
+- name: oldtrain-oldtrain-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-light-dali.jpg
+- name: statue-of-liberty-front-view-statueofliberty-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-dali-two.jpg
+- name: eduardo-eduardo-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-spagetti-accident.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-yellow-paper.jpg
+- name: oldhousecars-house-old-cars-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-alberto-giacometti.jpg
+- name: catacombs-catacombs-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-crabapple.jpg
+- name: oldhotel-oldhotel-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-marcel-duchamp.jpg
 ---
 Daughters Of The American Revolution Honor Two Bixby Students.&nbsp;Former Death Row Inmate Gets Life In Prison, No Parole.&nbsp;Leeds Reflects On Being First Female Native Law School Dean.&nbsp;Barry's Outer Bands Begin Lashing Southeastern Louisiana.&nbsp;Missing Man's Body Pulled From River Near Livingston.&nbsp;Millie Bobby Brown Denies The Eternals Role.&nbsp;New Mexico, Colorado Get Fired Up Over Hot Peppers.&nbsp;Warren Unveils Immigration Policy As Trump Threatens Enforcement.&nbsp;
